tests/snapshots/examples_fixtures/diagnostics_demos__error_messages__unexpected_token.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/error_messages/unexpected_token.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
